syncthing fixes?? (and updated sls config)

--- a/config.yaml
+++ b/config.yaml
@@ -58,6 +58,8 @@ AppIds:
   - 388090
 #It takes two
   - 1426210
+#Beholder 2
+  - 761620
 #Enables playing of not owned games. Respects black-/whitelist AppIds
 PlayNotOwnedGames: no
 #Additional AppIds to inject (Overrides your black-/whitelist & also overrides OwnerIds for apps you got shared!) Best to use this only on games NOT in your library.
@@ -83,6 +85,7 @@ AdditionalApps:
   - 354140
   - 1426210
   - 388090
+  - 761620
 #Extra Data for Dlcs belonging to a specific AppId. Only needed
 #when the App you're playing is hit by Steams 64 DLC limit
 DlcData:
