integrated hyprland.conf to home manager

--- a/modules/hosts/laptop/home-manager/hyprland.conf
+++ b/modules/hosts/laptop/home-manager/hyprland.conf
@@ -53,7 +53,7 @@ $menu = wofi --show drun
 exec-once = swaync
 exec-once = /home/oliverlin/.config/hypr/xdph.sh
 exec-once = systemctl --user start hyprpolkitagent
-#exec-once = pipewire
+exec-once = hyprnotify
 exec-once = hyprpaper
 exec-once = waybar
 exec = gsettings set org.gnome.desktop.interface gtk-theme "arc-gtk-theme"   # for GTK3 apps
@@ -340,8 +340,28 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+windowrule {
+  name = windowrule-1
+  suppress_event = maximize
+  match:class = .*
+}
+
 #gamescope fix
-windowrulev2 = maximize, title:^(Gamescope)$
+windowrule {
+  name = windowrule-2
+  maximize = on
+  match:title = ^(Gamescope)$
+}
+
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+  name = windowrule-3
+  no_focus = on
+  match:class = ^$
+  match:title = ^$
+  match:xwayland = 1
+  match:float = 1
+  match:fullscreen = 0
+  match:pin = 0
+}
+
